<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical">


    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:headerBackground="@color/colorPrimaryBackground"
        android:numbersSelectorColor="@color/colorAccent"
        android:timePickerMode="clock" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/select_days"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/selected_weekdays"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/monday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/monday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tuesday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/tuesday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/wednesday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/wednesday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/thursday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/thursday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/friday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/friday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saturday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/saturday_short"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sunday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corner"
            android:shape="rectangle"
            android:text="@string/sunday_short"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_large_green"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_large_green"
            android:text="@string/save"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>