<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context="be.ugent.mydigipill.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryBackground">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="87dp"
            android:layout_height="38dp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_top_login"
            android:background="@drawable/sign_up_bg"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="87dp"
            android:layout_height="38dp"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_top_login"
            android:background="@drawable/sign_up_bg"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/action_login"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/buttons_large_blue"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/continue_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_host_fragment" />

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:navGraph="@navigation/login_nav_graph" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text=""
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/continueButton">

            <ProgressBar
                android:id="@+id/loadingAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
